--- a/html/iframe.html
+++ b/html/iframe.html
@@ -10,5 +10,25 @@
   <h1>제목: iframe 연구소</h1>
   <iframe src="./insultPage.html" frameborder="0" width="300" height="300"></iframe>
   <a download="C:/Users/user/Desktop/ssafy07/mygit/TIL/html/iframe.html">a 태그 연구</a>
+  <div title="메렁">마우스 호버 시메렁이라고 나올까요?</div>
+  <br>
+  <addr title="메렁2">메렁2라고 나올까요?</addr>
+  <br>
+  <bdo dir="rtl">이게 거꾸로 태그인가요?</bdo>
+  <br>
+  <bdo dir="ltr">이건 거꾸로 아닙니다</bdo>
+  <div>br은 줄바꿈으로만 사용하세요 앞에 여백으로 사용하지 마세요(bdo는 자동 줄바꿈이 안되네요)</div>
+  <cite>출처 적용 태그(그냥 스타일만 바뀜)</cite>
+  <br>
+  <b>b 스타일만 바뀜</b>
+  <br>
+  <strong>strong 스타일만 바뀜</strong>
+  <code> 코드 조각 뽑기(기본은 한줄만 표현)</code>
+  <pre><code>
+    이건 pre로 감싼 code로 
+    여러줄이 표현됩니다
+  </code></pre>
+  <data value="asdf">데이터랑 밸류를 연결해 준다고 하네요? 그냥 div 쓸듯</data>
+  <br>
 </body>
 </html>
