--- a/html/style_map_area.html
+++ b/html/style_map_area.html
@@ -13,6 +13,9 @@
     width: 260px;
     height: 232px;
   }
+  .color-black {
+    background-color: black;
+  }
 </style>
 </head>
 <body>
@@ -28,5 +31,29 @@
           target="_blank" alt="JavaScript">
 </map>
 <img usemap="#infographic" src="./mdn-info2.png" alt="MDN infographic">
+<map name="infographic">
+  <area shape="rect" coords="184,6,253,27"
+        href="https://mozilla.org"
+        target="_blank" alt="Mozilla">
+  <area shape="circle" coords="130,136,60"
+        href="https://developer.mozilla.org/"
+        target="_blank" alt="MDN">
+  <area shape="poly" coords="130,6,253,96,223,106,130,39"
+        href="https://developer.mozilla.org/docs/Web/Guide/Graphics"
+        target="_blank" alt="Graphics">
+  <area shape="poly" coords="253,96,207,241,189,217,223,103"
+        href="https://developer.mozilla.org/docs/Web/HTML"
+        target="_blank" alt="HTML">
+  <area shape="poly" coords="207,241,54,241,72,217,189,217"
+        href="https://developer.mozilla.org/docs/Web/JavaScript"
+        target="_blank" alt="JavaScript">
+  <area shape="poly" coords="54,241,6,97,36,107,72,217"
+        href="https://developer.mozilla.org/docs/Web/API"
+        target="_blank" alt="Web APIs">
+  <area shape="poly" coords="6,97,130,6,130,39,36,107" class="color-black"
+        href="https://developer.mozilla.org/docs/Web/CSS"
+        target="_blank" alt="CSS">
+</map>
+<img usemap="#infographic" src="https://interactive-examples.mdn.mozilla.net/media/examples/mdn-info.png" alt="MDN infographic">
 </body>
 </html>
