1015 area 뭔지 모르겠음

--- a/html/style_map_area.html
+++ b/html/style_map_area.html
@@ -30,9 +30,9 @@
           href="https://developer.mozilla.org/docs/Web/JavaScript"
           target="_blank" alt="JavaScript">
 </map>
-<img usemap="#infographic" src="./mdn-info2.png" alt="MDN infographic">
+<!-- <img usemap="#infographic" src="./mdn-info2.png" alt="MDN infographic"> -->
 <map name="infographic">
-  <area shape="rect" coords="184,6,253,27"
+  <area shape="rect" coords="184,6,253,27" "
         href="https://mozilla.org"
         target="_blank" alt="Mozilla">
   <area shape="circle" coords="130,136,60"
@@ -50,10 +50,10 @@
   <area shape="poly" coords="54,241,6,97,36,107,72,217"
         href="https://developer.mozilla.org/docs/Web/API"
         target="_blank" alt="Web APIs">
-  <area shape="poly" coords="6,97,130,6,130,39,36,107" class="color-black"
+  <area shape="poly" coords="6,97,130,6,130,39,36,107"
         href="https://developer.mozilla.org/docs/Web/CSS"
         target="_blank" alt="CSS">
 </map>
-<img usemap="#infographic" src="https://interactive-examples.mdn.mozilla.net/media/examples/mdn-info.png" alt="MDN infographic">
+<img usemap="#infographic" style="width:800px" src="https://interactive-examples.mdn.mozilla.net/media/examples/mdn-info.png" alt="MDN infographic">
 </body>
 </html>
