--- a/html/example.html
+++ b/html/example.html
@@ -7,5 +7,14 @@
   </head>
   <body>
     <h1>&lt;h1&gt; element</h1>
+    <label for="fuel">Fuel level:</label>
+
+<meter id="fuel"
+       min="0" max="100"
+       low="33" high="66" optimum="80"
+       value="10">
+    at 50/100
+</meter>
+
   </body>
 </html>
