--- a/html/input.html
+++ b/html/input.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
+  모든 키는 <kbd>key</kbd>
   <input type="button"  value="asdf">
   <br>
   <input type="checkbox">
